template for event, vote, bill

--- a/src/app/components/connection/connectionrequest/connectionrequest.component.html
+++ b/src/app/components/connection/connectionrequest/connectionrequest.component.html
@@ -41,7 +41,7 @@
                   -->
                    <div *ngIf="connection.status === 'REQUESTED'">
                        <button class="btn btn-outline-primary" type="button" (click)="acceptRequest(connection)">Accept</button>
-                       <button class="btn btn-outline-danger" type="button" (click)="denyRequest(connection)">Not Interested</button>                       
+                       <button class="btn btn-outline-danger" type="button" (click)="denyRequest(connection)">Later</button>                       
                    </div>
                    <!--
                    <span class="separator"></span>
