--- a/src/app/components/searchlegislators/searchlegislators.component.html
+++ b/src/app/components/searchlegislators/searchlegislators.component.html
@@ -1,8 +1,10 @@
-<div>
+<div class="row">
+<div class="col-xs-12">
   Find Legislators:
+</div>
 </div>  
 
-<div class="address">
+<div class="address col-xs-12">
   Address: <app-g-address-search (setAddress)="getAddress($event)" adressType="geocode"></app-g-address-search>
 </div>
 
