--- a/src/app/components/security/createpage/createpageselection/createpageselection.component.html
+++ b/src/app/components/security/createpage/createpageselection/createpageselection.component.html
@@ -44,7 +44,7 @@
                 <span>
                 <i class="fa fa-flag" aria-hidden="true"></i>
                   <p class="create-page-title">
-                      Politcal Party
+                      Political Party
                   </p>
               </span>
                 <p>
@@ -62,7 +62,7 @@
                   </p>
               </span>
                 <p>
-                  A Group of anything such as NGO, HOA.
+                  A Group of anything such as Committee, NGO, HOA.
                 <p>
               </button>
             </div>
