--- a/src/app/components/searchlegislators/searchlegislators.component.css
+++ b/src/app/components/searchlegislators/searchlegislators.component.css
@@ -29,7 +29,7 @@
   .address input{
     width: 500px;
   }
-.custom-hover-legislator:before{
+/* .custom-hover-legislator:before{
   position: absolute;
   content: "";
   width: 0px;
@@ -68,9 +68,45 @@
   transition: height 0.3s linear,
   width 0.3s linear 0.3s;
 
-}
+} */
 /*.legislator-box-shadow{
   -webkit-box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.75);
   box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.75);
 }*/
+
+
+/*----- button 1 -----*/
+.btn-1::before, .btn-1::after{
+  transition-delay: 0.2s;
+}
+.btn-1 span::before, .btn-1 span::after{
+  transition-delay: 0s;
+}
+.btn-1::before{
+  right: 0;
+  top: 0;
+}
+.btn-1::after{
+  left: 0;
+  bottom: 0;
+}
+.btn-1 span::before{
+  left: 0;
+  top: 0;
+}
+.btn-1 span::after{
+  right: 0;
+  bottom: 0;
+}
+.btn-1:hover::before, .btn-1:hover::after{
+  transition-delay: 0s;
+}
+.btn-1:hover span::before, .btn-1:hover span::after{
+  transition-delay: 0.2s;
+}
+.custom-hover-legislator:hover{
+  border: 1.5px solid #028ece;
+  border-radius: 10px;
+  transition: 1s;
+}
