--- a/src/app/components/connection/connectionlist/connectionlist.component.html
+++ b/src/app/components/connection/connectionlist/connectionlist.component.html
@@ -1,8 +1,8 @@
 
 
- <div class="card mt-3 tab-card">
+ <div class="card tab-card">
     <div class="card-header tab-card-header">
-      <ul class="nav nav-tabs card-header-tabs li-justify-content-center col-xs-3" id="myTab" role="tablist">
+      <!-- <ul class="nav nav-tabs card-header-tabs li-justify-content-center col-xs-3" id="myTab" role="tablist">
         <li class="nav-item">
             <a class="nav-link" id="one-tab" data-toggle="tab" href="javascript:void(0);" role="tab" aria-controls="One" aria-selected="true">
                 Accepted
@@ -18,7 +18,33 @@
                 All
             </a>
         </li>
-      </ul>
+      </ul> -->
+      <ul class="nav nav-tabs card-header-tabs li-justify-content-center col-xs-3">
+        <li class="nav-item border-right">
+          <a class="nav-link search-legislator-navpills" href="#">
+            <span class="badge badge-primary">
+              Connected
+              <span class="badge badge-light"> 10 </span>
+            </span>
+          </a>
+        </li>
+        <li class="nav-item border-right">
+          <a class="nav-link search-legislator-navpills" href="#">
+            <span class="badge badge-primary">
+              Pending
+              <span class="badge badge-light"> 10 </span>
+            </span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link search-legislator-navpills" href="#">
+            <span class="badge badge-primary">
+              All
+              <span class="badge badge-light"> 10 </span>
+            </span>
+          </a>
+        </li>
+        </ul>
     </div>
 
     <div class="tab-content" id="myTabContent">
