--- a/src/app/components/searchlegislators/searchlegislators.component.html
+++ b/src/app/components/searchlegislators/searchlegislators.component.html
@@ -1,5 +1,35 @@
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <ul class="nav">
+        <li class="nav-item border-right">
+          <a class="nav-link search-legislator-navpills" href="#">
+            <span class="badge badge-primary">Legislators</span>
+          </a>
+        </li>
+        <li class="nav-item border-right">
+          <a class="nav-link search-legislator-navpills" href="#">
+            <span class="badge badge-primary">District</span>
+          </a>
+        </li>
+        <li class="nav-item border-right">
+          <a class="nav-link search-legislator-navpills" href="#">
+            <span class="badge badge-primary">Township</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link search-legislator-navpills" href="#">
+            <span class="badge badge-primary">HOA</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
 <div class="row">
-<div class="col-xs-12">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   Find Legislators:
 </div>
 </div>
