--- a/src/app/components/connection/connectionlist/connectionlist.component.html
+++ b/src/app/components/connection/connectionlist/connectionlist.component.html
@@ -22,7 +22,7 @@
       <ul class="nav nav-tabs card-header-tabs li-justify-content-center col-xs-3">
         <li class="nav-item border-right">
           <a class="nav-link search-legislator-navpills" href="#">
-            <span class="badge badge-primary">
+            <span class="badge badge-secondary badge-active">
               Connected
               <span class="badge badge-light"> 10 </span>
             </span>
@@ -30,7 +30,7 @@
         </li>
         <li class="nav-item border-right">
           <a class="nav-link search-legislator-navpills" href="#">
-            <span class="badge badge-primary">
+            <span class="badge badge-secondary">
               Pending
               <span class="badge badge-light"> 10 </span>
             </span>
@@ -38,7 +38,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link search-legislator-navpills" href="#">
-            <span class="badge badge-primary">
+            <span class="badge badge-secondary">
               All
               <span class="badge badge-light"> 10 </span>
             </span>
